<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_weight="1"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:background="@color/TEAL">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="507dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="Menu"
            android:textColor="#050303"
            android:textSize="50sp"
            app:fontFamily="sans-serif" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView53"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/spa1"
                android:textColor="#020101"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView54"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_durée"
                android:textColor="#030202"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leduree1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView55"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_prix"
                android:textColor="#070505"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leprix1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/spa2"
                android:textColor="#020101"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_durée"
                android:textColor="#030202"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leduree2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_prix"
                android:textColor="#070505"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leprix2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/spa3"
                android:textColor="#020101"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_durée"
                android:textColor="#030202"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leduree3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_prix"
                android:textColor="#070505"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leprix3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView62"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/spa4"
                android:textColor="#020101"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView63"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_durée"
                android:textColor="#030202"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leduree4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView64"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_prix"
                android:textColor="#030202"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leprix4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView65"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/spa5"
                android:textColor="#020101"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView66"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_durée"
                android:textColor="#030202"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leduree5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_prix"
                android:textColor="#030202"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leprix5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/spa6"
                android:textColor="#020101"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView69"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/get_prix"
                android:textColor="#030202"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/leprix6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>